test/sema/typeck/expr/method_call/call-unknown-method-with-unknown-argument.dora
class Foo fn f(foo: Foo) { foo.bar(unknown); }
